tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__WithoutDying-AAAAAAAAAAAAAAAAAAAACw==__ProtectYourBaseT-AAAAAAAAAAAAAAAAAAAAeA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 120,
  "prerequisites": [
    121
  ],
  "properties": {
    "auto_claim": false,
    "desc": "One needs proper protection for ones home. So why not get some turrets for safety? At the moment, 2 Turrets are available: \"Potato\" and \"disposable item\". I assume you can guess what they do and how they work...",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§5§lProtect Your Base: Tier 1",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    121
  ],
  "rewards": [],
  "tasks": []
}
