tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__WithoutDying-AAAAAAAAAAAAAAAAAAAACw==__QuantumChestplat-AAAAAAAAAAAAAAAAAAAMRw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3143,
  "prerequisites": [
    803
  ],
  "properties": {
    "auto_claim": false,
    "desc": "QuantumSuit Bodyarmor allows for flight just like its predecessor, but when you hold shift+space instead of going down you will go slightly up.\nThe next tier - GraviChestPlate - will get rid of this problem altogether.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Quantum Chestplate",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    803
  ],
  "rewards": [],
  "tasks": []
}
