tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__WithoutDying-AAAAAAAAAAAAAAAAAAAACw==__QuantumGoggles-AAAAAAAAAAAAAAAAAAAFRw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1351,
  "prerequisites": [
    803,
    1350
  ],
  "properties": {
    "auto_claim": false,
    "desc": "As you continue to progress, you notice that your black goggles don't match your nice white and shiny armor. You decide to get a pair of white ones.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Quantum Goggles",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    803,
    1350
  ],
  "rewards": [],
  "tasks": []
}
