tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__WithoutDying-AAAAAAAAAAAAAAAAAAAACw==__RailgunsWhatElse-AAAAAAAAAAAAAAAAAAAA3w==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 223,
  "prerequisites": [
    221
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Massive power, and a wonderful sound when they fire. I recommend to use upgrades to increase range and damage.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§b§lRailguns, What Else",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    221
  ],
  "rewards": [],
  "tasks": []
}
